srcs/tester/base/vector/size/log.txt
./base/vector/size/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myints;
 ^
./base/vector/size/patched.cpp:8:30: error: use of undeclared identifier 'myints'
 std::cout << "0. size: " << myints.size() << '\n';
                             ^
./base/vector/size/patched.cpp:10:27: error: use of undeclared identifier 'myints'
 for (int i=0; i<10; i++) myints.push_back(i);
                          ^
./base/vector/size/patched.cpp:11:30: error: use of undeclared identifier 'myints'
 std::cout << "1. size: " << myints.size() << '\n';
                             ^
./base/vector/size/patched.cpp:13:2: error: use of undeclared identifier 'myints'
 myints.insert (myints.end(),10,100);
 ^
./base/vector/size/patched.cpp:13:17: error: use of undeclared identifier 'myints'
 myints.insert (myints.end(),10,100);
                ^
./base/vector/size/patched.cpp:14:30: error: use of undeclared identifier 'myints'
 std::cout << "2. size: " << myints.size() << '\n';
                             ^
./base/vector/size/patched.cpp:16:2: error: use of undeclared identifier 'myints'
 myints.pop_back();
 ^
./base/vector/size/patched.cpp:17:30: error: use of undeclared identifier 'myints'
 std::cout << "3. size: " << myints.size() << '\n';
                             ^
9 errors generated.
